updated Han Resequenced plots

--- a/legacy.tex
+++ b/legacy.tex
@@ -213,8 +213,8 @@ To confirm this, we also ran the reverse-GWAS approach on these resequenced indi
 We found no correlation in p-values indicating that the SNPs in the resequenced dataset had no association to $Q$.
 
 We did a similar analysis using the variants identified in the \textit{5PC} model present in the 83 resequenced individuals.
-Of the 11,416 suspicious variants identified globally, only 8,697 of them are found in the 83 individuals in the original 1kGP data.
-From this subset, 8,085 of these variants are missing entirely from the resequenced data.
+Of the 11,416 suspicious variants identified globally, only 7,607 of them are found in the 83 individuals in the original 1kGP data.
+From this subset, only 613 of these variants are present in the resequenced data, the rest are missing entirely.
 We noticed a unusually large number of INDELs that are fixed in the resequenced data that are at lower frequencies in the 1kGP. (See Figure \ref{90HanSFS_full})
 
 \subsection{Suspicious variants impact modern genomics analyses}
@@ -230,7 +230,7 @@ This suggests that the imputation reference panel still includes individuals wit
 
 \subsubsection{Microarrays}
 
-We found that 476 of the variants we identified as being associated to $Q$ were present on Illumina's Omni 2.5 chip. This does not mean that these variants are false positives, but rather, that in the 1kGP, individuals with low $Q$ were less likely to be called as having a variant in that position. Moreover, using the 1kGP as a reference panel might impact the population allele frequencies observed for these positions.
+We found that 219 of the variants we identified as being associated to $Q$ were present on Illumina's Omni 2.5 chip. This does not mean that these variants are false positives, but rather, that in the 1kGP, individuals with low $Q$ were less likely to be called as having a variant in that position. Moreover, using the 1kGP as a reference panel might impact the population allele frequencies observed for these positions.
 
 \subsubsection{GWAS}
 
