--- a/rick/1KGP.Rmd
+++ b/rick/1KGP.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "HGP analysis"
+title: "HGP analysis: fit model"
 author: 
 - name: Rick Farouni, 
   affiliation:
@@ -23,136 +23,28 @@ options(scipen=999)
 ```
 
 ```{r}
-library(Matrix)
-#library(irlba)
-#library(threejs)
 library(tidyverse)
 library(lfa)
 library(furrr)
 library(broom)
+library(tictoc)
 options(future.globals.maxSize= 10000000000)
 plan(multicore)
 ```
 
-# Download metadata
-
-Download bas files for all the samples 
-
-```{bash message=FALSE}
-for id in `cat ids.txt`
-  do
-  wget ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/data/${id}/alignment/${id}.mapped.*.bam.bas -P ./data/bas
-done
-wait
+```{r}
+gc()
 ```
-
-## Read bas files
-
-```{r read_bas}
-read_basfiles <- function(bas_filepath) {
-  
-  bas_file <- read_tsv(bas_filepath,
-                  col_types = cols_only('sample' = 'c', 
-                                        'platform' = 'c',        
-                                       'average_quality_of_mapped_bases' = col_guess())) 
-  return( bas_file)
-}
-```
-
-### Preprocess table
 
 ```{r}
-bas_files <- list.files(path = ".",
-                        pattern="*bam.bas")
-
-bas_dt <- 
-  map_dfr(bas_files,read_basfiles ) %>%
-  rename(avg_qual="average_quality_of_mapped_bases")
-bas_dt
-```
-
-
-```{r}
-bas_dt <-
-  bas_dt %>%
-  group_by(sample) %>%
-  mutate(id=1:n()) %>%
-  select(-platform)%>%
-  spread(id,avg_qual)
-bas_dt
-```
-```{r}
-n_not_na <- function(x) {
- sum(!is.na(x))
-}
-```
-
-
-```{r}
- bas_dt <- 
-  bas_dt %>%
-  ungroup()%>% 
-    mutate( avg_qual_sd =pmap_dbl(select(., -sample), lift_vd(sd,na.rm =TRUE )),
-           avg_qual_mean = rowMeans(select(., -sample),na.rm =TRUE),
-           avg_qual_n= pmap_dbl(select(., -sample), lift_vd(n_not_na)),
-           avg_qual_min= pmap_dbl(select(., -sample), lift_vd(min, na.rm =TRUE)),
-           avg_qual_max= pmap_dbl(select(., -sample), lift_vd(max, na.rm =TRUE))) %>%
-  select (sample, avg_qual_n, avg_qual_min,avg_qual_max,avg_qual_mean,avg_qual_sd, everything() ) 
+gcinfo(TRUE) 
 ```
 
 
 
-```{r}
-ped <- 
-  read_tsv(url("ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/working/20130606_sample_info/20130606_g1k.ped"))%>% 
-  rename(sample="Individual ID")
-ped 
-```
+#  Fit model
 
 
-```{r}
-bas_dt <- inner_join( ped  %>% 
-                       select(sample, Population),
-                       bas_dt,
-                     by="sample")
-bas_dt
-```
-
-
-```{r}
-bas_filepath <- "./data/metadata/average_quality_dt.txt"
-write_tsv(bas_dt, bas_filepath)
-```
-
-Plot 
- 
-
-```{r fig.width=20}
-ggplot(bas_dt,
-       aes(x=avg_qual_min,
-           y=avg_qual_max, 
-           colour=avg_qual_n )) +
-  geom_point(size=2)
- 
-```
-
-
-```{r fig.width=20}
-ggplot(bas_dt,
-       aes(x=avg_qual_mean,
-           y=avg_qual_sd, 
-           colour=avg_qual_n )) +
-  geom_point(size=2)
- 
-```
-
-
-# Logistic factor analysis
-
-```{r}
-bas_dt <- read_tsv(bas_filepath)
-avg_qual_mean <- bas_dt$avg_qual_mean
-```
 
 ```{r}
 
@@ -165,28 +57,34 @@ to_datalist <- function(i, data_genotype, data_iaf){
 }
 
   
-get_af_data <- function(data, d=4){
+get_af_data <- function(){
+
+  data <- read.bed("./data/plink/ALL_Pops")
+  message("plink data loaded")
+  str(data)
+  LF <- readRDS("./data/preprocessed/lf.rds")
   
 
   # compute the first d factors including the intercept
   
-  message("running lfa")
-
-  LF <- lfa(data, d)
-  # compute the individual-specific allele frequencies
   
   message("running  af")
-
+  tic()
   data_iaf <- af(data, LF)
+  toc()
+
   loci <- c(1:dim(data)[1])
   names(loci) <- loci
   
   message("to datalist")
 
+  tic()
   data_list <- future_map(loci, 
                  to_datalist,
                  data_genotype=data,
                  data_iaf=data_iaf) 
+
+  toc()
   
   data_list <- 
   enframe(data_list,
@@ -254,19 +152,22 @@ get_plot <- function(data){
 
 
 ```{r}
+bas_filepath <- "./data/metadata/average_quality_dt.txt"
+bas_dt <- read_tsv(bas_filepath)
+avg_qual_mean <- bas_dt$avg_qual_mean
+```
+
+
+
+```{r}
 run_workflow <- function(loci){
 
-  data <- read.bed("./data/plink/ALL_Pops")
+  data_list <- get_af_data() 
   
-  message("plink data loaded")
-  
-  data_list <- get_af_data(data) 
-  
-  rm(data)
-  gc()
+
   
   message("fitting model")
-  
+  tic()
   data_list <- 
     data_list %>%
   #slice(1:10) %>%
@@ -279,6 +180,8 @@ run_workflow <- function(loci){
     predicted =future_map(fit1, c(2))) %>%
     unnest(stats) %>%
     arrange(-deviance) 
+
+  toc()
   
   return(data_list)
   
